# ssg

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: deploy.yml
content/: about.md
content/posts/: 2026-05-05-hello-world.md  2026-05-05-hi.md
docs/superpowers/plans/: 2026-05-05-rust-ssg.md
docs/superpowers/specs/: 2026-05-05-rust-ssg-design.md
src/: build.rs  config.rs  content.rs  feed.rs  main.rs  markdown.rs  new.rs  render.rs  scanner.rs  sitemap.rs
static/: style.css
templates/: about.html  base.html  index.html  post.html
tests/: build_integration.rs
