[package]
name = "ssg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
pulldown-cmark = { version = "0.10", default-features = false, features = ["html"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slug = "0.1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tera = "1"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
